# actm_control

./: README.md  environment.yml  pyproject.toml
src/: actm.ipynb  actm_simulations.ipynb  actm_simulations.py  base.py  base_full_explained.py
